# webcam_draw

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.ps1
archive/: color_detector.cpp
